[tool.poetry]
name = "sesame4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pysesame3 = "^0.6.0"
PyYAML = "^6.0"
dacite = "^1.6.0"
awscrt = "^0.13.13"
Flask = "^2.1.2"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
isort = ">=5.10.1"
ipython = ">=8.4.0"
flake8 = ">=4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv"
]
stubPath = "typings"
venvPath = ".venv"
typeCheckingMode = "strict"